--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,10 +1,9 @@
 /*
-Author:     Jawad Bhatti
-Year:       2019
-Name:       OnFusion
-URL:        https://onfusion.github.io/
+Author:     Muhammad Khawar
+Year:       2021
+URL:        https://khawarafzal.github.io/
 Version:    v1.0
-Copyright 2019, Onfusion.
+Copyright 2021, khawarafzal.
 Free to use and abuse under the MIT license.
 */
 
@@ -25,5 +24,4 @@ Free to use and abuse under the MIT license.
 @import "education";
 @import "testimonial";
 @import "footer";
-
 @import "responsive";
