--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -9,7 +9,7 @@
 
     &:before {
         content: "";
-        background: rgba(0, 0, 0, 0.8);
+        background: rgba(255, 255, 255, 0.8);
         position: absolute;
         top: 0;
         bottom: 0;
@@ -24,21 +24,19 @@
     }
 
     .text-block {
-        // background: black;
-        color: $grey;
         height: 420px;
         position: absolute;
         top: 50%;
         left: 0;
         right: 0;
         margin: -250px auto 0;
-        max-width: 600px;
+        max-width: 840px;
         text-align: center;
     }
 
     .logo {
         margin-bottom: 10px;
-        max-width: 60px;
+        max-width: 380px;
     }
 
     h1 {
@@ -50,7 +48,7 @@
         text-transform: uppercase;
 
         strong {
-            color: $success;
+            color: $subheading;
             display: block;
             font-size: 36px;
             font-weight: 600;
@@ -60,7 +58,7 @@
     }
 
     .cd-headline {
-        color: $white;
+        color: $heading;
         font-size: 26px;
         line-height: 30px;
         letter-spacing: 2px;
