--- a/sass/_variable.scss
+++ b/sass/_variable.scss
@@ -11,7 +11,7 @@ $greyDark: #666666;
 
 
 $warning: #fdaf1a;
-$primary: #2196f3;
-$success: #38de8a;
+$primary: #470e66;
+$success: #db0a88;
 $heading: #470e66;
 $subheading: #db0a87;
