--- a/sass/_navbar.scss
+++ b/sass/_navbar.scss
@@ -79,6 +79,9 @@
     height: 80px;
 
     >img {
-        max-width: 50px;
+        max-width: 75px;
+        @media (max-width: 767px) {
+            max-width: 62px;
+        }
     }
 }
