--- a/sass/_skills.scss
+++ b/sass/_skills.scss
@@ -1,4 +1,7 @@
 .skills {
+    background-image: url(../images/bg-1.png);
+    background-size: cover;
+    background-attachment: fixed;
 
     .panel {
         [class*="6"] {
