--- a/css/style.css
+++ b/css/style.css
@@ -159,6 +159,53 @@ section {
   .social .facebook:hover .cta {
     color: #4064ad; }
 
+.lef-to-rig {
+  -webkit-animation-duration: 2s;
+  animation-duration: 2s;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both;
+  -webkit-animation-name: rightoleft;
+  animation-name: rightoleft; }
+
+.rig-to-lef {
+  -webkit-animation-duration: 2s;
+  animation-duration: 2s;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both;
+  -webkit-animation-name: leftoright;
+  animation-name: leftoright; }
+
+.fadin {
+  -webkit-animation-duration: 2s;
+  animation-duration: 2s;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both;
+  -webkit-animation-name: fadein;
+  animation-name: fadein; }
+
+@keyframes rightoleft {
+  0% {
+    opacity: 0;
+    -webkit-transform: translate3d(100%, 0, 0);
+    transform: translate3d(100%, 0, 0); }
+  100% {
+    opacity: 1;
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0); } }
+@keyframes leftoright {
+  0% {
+    opacity: 0;
+    -webkit-transform: translate3d(-100%, 0, 0);
+    transform: translate3d(-100%, 0, 0); }
+  100% {
+    opacity: 1;
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0); } }
+@keyframes fadein {
+  0% {
+    opacity: 0; }
+  100% {
+    opacity: 1; } }
 .navbar {
   border-radius: 0;
   border-width: 0 0 1px 0;
@@ -563,8 +610,13 @@ section {
       -ms-transition: 0.4s ease-in-out;
       -moz-transition: 0.4s ease-in-out; }
 
+.skills {
+  background-image: url(../images/bg-1.png);
+  background-size: cover;
+  background-attachment: fixed; }
+
 .history {
-  background: #f2f2f2; }
+  background-color: #f2f2f2; }
 
 .portfolio {
   list-style: none;
