--- a/sass/_button.scss
+++ b/sass/_button.scss
@@ -44,6 +44,7 @@
 .portfolio {
     .cta {
         border: 1px solid $grey;
+        border-radius: 50%;
         color: $grey;
         cursor: pointer;
         display: inline-block;
