--- a/sass/_testimonial.scss
+++ b/sass/_testimonial.scss
@@ -30,8 +30,7 @@
 
 .testimonial {
     blockquote {
-        border: 0;
-        box-shadow: 0 0 5px rgba(0, 0, 0, 0.15);
+        border: 3px solid rgb(219, 10, 136);
         font-size: 14px;
         line-height: 22px;
         margin: 0;
