--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -19,7 +19,7 @@
     }
 
     .container {
-        height: 100vh;
+        height: 100%;
         z-index: 100;
     }
 
@@ -29,7 +29,7 @@
         top: 50%;
         left: 0;
         right: 0;
-        margin: -250px auto 0;
+        margin: -210px auto 0;
         max-width: 840px;
         text-align: center;
     }
@@ -37,6 +37,7 @@
     .logo {
         margin-bottom: 10px;
         max-width: 380px;
+        min-height: 103px;
         @media (max-width: 767px) {
             max-width: 250px;
         }
@@ -123,6 +124,19 @@
     }
 }
 
+.load-animation {
+    animation-duration: 1.25s;
+    animation-fill-mode: forwards;
+    animation-iteration-count: infinite;
+    animation-name: placeHolderShimmer;
+    animation-timing-function: linear;
+    background: #F6F6F6;
+    background: linear-gradient(to right, #F6F6F6 8%, #F0F0F0 18%, #F6F6F6 33%);
+    background-size: 800px 104px;
+    height: 103px;
+    position: relative;
+}
+
 .lef-to-rig {
     -webkit-animation-duration: 2s;
     animation-duration: 2s;
@@ -146,6 +160,24 @@
 	animation-fill-mode: both;
 	-webkit-animation-name: fadein;
 	animation-name: fadein;
+}
+
+@-webkit-keyframes placeHolderShimmer {
+    0% {
+      background-position: -468px 0;
+    }
+    100% {
+      background-position: 468px 0;
+    }
+  }
+  
+  @keyframes placeHolderShimmer {
+    0% {
+      background-position: -468px 0;
+    }
+    100% {
+      background-position: 468px 0;
+    }
 }
 @keyframes rightoleft {
     0% {
