--- a/sass/_skills.scss
+++ b/sass/_skills.scss
@@ -1,7 +1,8 @@
 .skills {
-    background-image: url(../images/bg-1.png);
-    background-size: cover;
-    background-attachment: fixed;
+    // background-image: url(../images/bg-1.png);
+    // background-size: cover;
+    // background-attachment: fixed;
+    position: relative;
 
     .panel {
         [class*="6"] {
