--- a/sass/_variable.scss
+++ b/sass/_variable.scss
@@ -1,6 +1,6 @@
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800|Dosis:300,400,500,600,700|Raleway:300,400,500,600,700,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,600;1,700;1,800;1,900&display=swap');
 
-// font-family: 'Open Sans', sans-serif;
+// font-family: 'Nunito', sans-serif;
 // font-family: 'Raleway', sans-serif;
 // font-family: 'Dosis', sans-serif;
 
