--- a/sass/style.scss
+++ b/sass/style.scss
@@ -25,3 +25,4 @@ Free to use and abuse under the MIT license.
 @import "testimonial";
 @import "footer";
 @import "responsive";
+@import "animations";
