--- a/sass/_projects.scss
+++ b/sass/_projects.scss
@@ -154,3 +154,17 @@
         }
     }
 }
+
+
+//Modal styling
+.modal-dialog {
+    @media (min-width: 768px) {
+        width: 750px;
+    }
+    @media (min-width: 992px) {
+        width: 970px;
+    }
+    @media (min-width: 1200px) {
+        width: 1170px;
+    }
+}
