--- a/sass/_testimonial.scss
+++ b/sass/_testimonial.scss
@@ -37,6 +37,7 @@
         padding: 20px;
         position: relative;
         text-align: center;
+        border-radius: $site-radius;
 
         .dp {
             border-radius: 50%;
