--- a/sass/_timeline.scss
+++ b/sass/_timeline.scss
@@ -215,6 +215,7 @@
         background: $white;
         box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
         padding: 20px;
+        border-radius: $site-radius;
 
         h4 {
             font-weight: 500;
