--- a/sass/_about.scss
+++ b/sass/_about.scss
@@ -11,6 +11,7 @@
         margin: -80px auto 0;
         overflow: hidden;
         width: 150px;
+        border: 4px solid white;
 
         img {
             max-width: 100%;
