--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -1,15 +1,18 @@
 .welcome {
-    background-image: url("../images/welcome.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: top center;
     height: 100vh;
     min-height: 500px;
     position: relative;
+    @media (min-width: 1024px) {
+        background-image: url("../images/welcome.jpg");
+    }
     @media (max-width: 1024px) and (min-width: 768px) {
-        background-image: none;
-        height: 520px;
-        background-size: auto 520px;
+        background-image: url("../images/welcome-tb.jpg");
+    }
+    @media (max-width: 767px) {
+        background-image: url("../images/welcome-mb.jpg");
     }
 
     &:before {
@@ -29,12 +32,12 @@
     }
 
     .text-block {
-        height: 420px;
+        height: 474px;
         position: absolute;
         top: 50%;
         left: 0;
         right: 0;
-        margin: -210px auto 0;
+        margin: -237px auto 0;
         max-width: 840px;
         text-align: center;
     }
@@ -65,6 +68,12 @@
             margin-top: 15px;
             text-transform: none;
         }
+    }
+    h3 {
+        margin: 20px 0;
+        font-size: 2.5rem;
+        color: $subheading;
+        font-weight: bold;
     }
 
     .cd-headline {
