--- a/sass/_projects.scss
+++ b/sass/_projects.scss
@@ -167,4 +167,17 @@
     @media (min-width: 1200px) {
         width: 1170px;
     }
+    .modal-header {
+        padding: 0;
+        border: none;
+        .close {
+            position: absolute;
+            right: 15px;
+            top: 15px;
+            z-index: 50;
+        }
+    }
+    .modal-body {
+        padding-top: 50px;
+    }
 }
