--- a/css/style.css
+++ b/css/style.css
@@ -202,8 +202,10 @@ section {
     margin-right: 0;
     padding: 7px 10px; }
     .navbar-default .navbar-toggle:hover, .navbar-default .navbar-toggle:focus {
-      background: #252525;
+      background: inherit;
       border-color: #db0a88; }
+    .navbar-default .navbar-toggle[aria-expanded="true"] {
+      background: #470e66; }
     .navbar-default .navbar-toggle .icon-bar {
       background-color: #db0a88;
       height: 4px;
@@ -715,6 +717,16 @@ section {
 @media (min-width: 1200px) {
   .modal-dialog {
     width: 1170px; } }
+.modal-dialog .modal-header {
+  padding: 0;
+  border: none; }
+  .modal-dialog .modal-header .close {
+    position: absolute;
+    right: 15px;
+    top: 15px;
+    z-index: 50; }
+.modal-dialog .modal-body {
+  padding-top: 50px; }
 
 .education {
   background: #f2f2f2; }
@@ -878,7 +890,7 @@ footer {
     font-size: 14px; }
 
   .navbar-collapse {
-    background: rgba(0, 0, 0, 0.9); }
+    background: rgba(255, 255, 255, 0.95); }
     .navbar-collapse.collapse {
       display: none !important; }
       .navbar-collapse.collapse.in {
@@ -907,10 +919,15 @@ footer {
         float: none !important;
         margin: 0; }
       .navbar .navbar-nav > li {
-        float: none; }
+        float: none;
+        padding: 0 15px;
+        text-align: center;
+        border-bottom: 1px solid rgba(0, 0, 0, 0.2); }
         .navbar .navbar-nav > li a {
           margin: 0;
-          text-align: left; } }
+          text-align: left;
+          padding: 10px 0;
+          display: inline-block; } }
 @media (max-width: 991px) {
   .portfolio li {
     width: 50%; }
