--- a/css/style.css
+++ b/css/style.css
@@ -648,7 +648,7 @@ section {
       -moz-transition: 0.4s ease-in-out;
       z-index: 1; }
   .portfolio .media {
-    min-height: 200px;
+    height: 200px;
     overflow: hidden; }
     .portfolio .media > img {
       height: auto;
@@ -1198,3 +1198,24 @@ footer {
   100% {
     box-shadow: 0 5px 15px 0px rgba(0, 0, 0, 0.6);
     transform: translatey(0px); } }
+.portfolio .media {
+  animation-duration: 1.25s;
+  animation-fill-mode: forwards;
+  animation-iteration-count: infinite;
+  animation-name: placeHolderShimmer;
+  animation-timing-function: linear;
+  background: #F6F6F6;
+  background: linear-gradient(to right, #f6f6f6 8%, #f0f0f0 18%, #f6f6f6 33%);
+  background-size: 800px 104px;
+  position: relative; }
+
+@-webkit-keyframes placeHolderShimmer {
+  0% {
+    background-position: -468px 0; }
+  100% {
+    background-position: 468px 0; } }
+@keyframes placeHolderShimmer {
+  0% {
+    background-position: -468px 0; }
+  100% {
+    background-position: 468px 0; } }
